LIST OF CHANGES

release 101.2.0 (2024-05-24)
 - remove dependency on HTML::Tidy
 - update NovaSeqX icon
 - Added a footer to the tracking run web page.

release 101.1.0
 - Deleted npg_tracking::illumina::run::short_info and
   npg_tracking::illumina::run::locations, their functionality is moved to
   npg_tracking::illumina::run::folder.
 - Moved a build method for the run_folder attribute from
   npg_tracking::illumina::run_folder to npg_tracking::illumina::run::folder.
 - Preparation for the deletion of unused instrument_utilisation table from
   the tracking db schema:
   - dropped instrument_utilisation table from the db schema, which is used
     for testing the tracking web application,
   - suppressed generation of the DBIx ORM class for this table and deleted
     the class.
 - Added an option to exclude lanes from a merge (see st::api::lims
   aggregate_libraries method).
 - Extended the basic search functionality of the tracking web application by
   enabling a search for lane annotations.

release 101.0.0
 - npg_tracking::illumina::run::short_info
     - Stopped parsing out run details from the run folder name. Deleted
       attributes, which were populated this way: 'name', 'instrument_string',
       'slot', 'flowcell_id'.
     - Deleted 'short_reference' method.
 - npg_tracking::illumina::run::folder
     - Removed dependency on 'short_reference' method, which used to be
       provided by npg_tracking::illumina::run::short_info.
     - Introduce a check to ensure that the run folder name on staging and
       in the database, when both are available, are the same.

release 100.0.1
 - For aggregation of lims objects by library in st::api::lims, do not
   consider the same library with different tag index in the same lane
   as a error. Chromium single cell ATAC libraries have four copies of
   each sample, each with a different tag.

release 100.0.0
 - To help monitor shadow run folders, include the run folder path into the