@@ -1,3 +1,20 @@
+<!-- Space: NPG -->
+<!-- Parent: Tracking -->
+<!-- Title: User Management -->
+
+<!-- Macro: :box:([^:]+):([^:]*):(.+):
+     Template: ac:box
+     Icon: true
+     Name: ${1}
+     Title: ${2}
+     Body: ${3} -->
+
+:box:info:Note:This page is automatically generated; any edits will be overwritten:
+
+###### Repository information
+
+<!-- Include: docs/includes/repo-metadata.md -->
+
 # How to give users the permissions to set up a run 
 Users that use the NPG pipeline could ask, through a ticket, to be 
 granted some permissions to set up runs.
